fix(css): edited some frontoffice css
- Added categories in the search bar on top.
- Edited CSS to make the category dropdown larger with names.
- Fixed hidden cart icon not visible since wish list was removed.
- Fixed navbar height if there is no item to show.

--- a/assets/scss/color2.css
+++ b/assets/scss/color2.css
@@ -4197,7 +4197,8 @@ button {
   background: url("../images/layout-1/drop-1.png") no-repeat scroll 20px 23px;
   text-align: center;
   text-align-last: center;
-  width: 175px;
+  /* width:175px; */
+  width: 250px;
   height: 100%;
   text-transform: uppercase;
 }
@@ -4609,7 +4610,8 @@ button {
   margin-right: 45px;
 }
 .layout-header2 .main-menu-block .input-block {
-  width: 750px;
+  /* width: 750px; */
+  width: 825px;
 }
 .layout-header2 .main-menu-block .icon-block {
   margin-left: 30px;
@@ -4644,7 +4646,7 @@ button {
   top: -16px;
   left: 16px;
 }
-.layout-header2 .main-menu-block .icon-block ul li:nth-child(n+5) {
+.layout-header2 .main-menu-block .icon-block ul li:nth-child(n+4) {
   display: inline-block;
 }
 .layout-header2 .main-menu-block .menu-nav {
@@ -4663,6 +4665,8 @@ button {
   justify-content: space-between;
   position: relative;
   z-index: 9;
+  height: 73px;
+  min-height: 73px;
 }
 .category-header-2 .navbar-menu .logo-block {
   display: none;
@@ -5071,7 +5075,8 @@ button {
   background: url("../images/layout-1/drop-1.png") no-repeat scroll 20px;
   text-align: center;
   text-align-last: center;
-  width: 175px;
+  /* width: 175px; */
+  width: 250px;
   text-transform: uppercase;
   border-left: 1px solid #dddddd;
 }
@@ -6929,6 +6934,10 @@ header {
   padding-bottom: 15px;
   background-color: #ffffff;
   border-bottom: 1px solid #dddddd;
+}
+.sticky .category-header-2 .navbar-menu {
+  height: 40px;
+  min-height: 40px;
 }
 .sticky .category-header-2 .navbar-menu .logo-block {
   display: flex;
